Proyecto2/k8s/rabbit-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-consumer
  namespace: proyecto2-202200141
  labels:
    app: rabbit-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-consumer
  template:
    metadata:
      labels:
        app: rabbit-consumer
    spec:
      imagePullSecrets:
        - name: zot-registry-secret
      containers:
        - name: rabbit-consumer
          image: dragging-coasting-dawdler.ngrok-free.dev/proyecto2/rabbit-consumer:202200141
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
