Proyecto2/k8s/rust-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: proyecto2-202200141
  labels:
    app: rust-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      imagePullSecrets:
        - name: zot-registry-secret
      containers:
        - name: rust-api
          image: dragging-coasting-dawdler.ngrok-free.dev/proyecto2/rust-api:202200141
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: rust-api
  namespace: proyecto2-202200141
spec:
  type: ClusterIP
  selector:
    app: rust-api
  ports:
    - name: http
      port: 8081
      targetPort: http
